# rpi_controlled_car

./: .gitignore  CMakeLists.txt  LICENSE  README.md  docker-compose.yml  start.sh
.config/: logs.dist.json  logs.json
.config/logs/: logs.json
broker/socketio/: myWebSocket.cpp  my_websocket.py
camera/: README.md  requirements.txt
camera/.config/: config.dist.json
camera/env/: env
camera/src/: main.py
control/: .env.dev  README.md  requirements.txt
control/.config/: config.dist.json
control/src/: .env  __init__.py  control_handler.py  drive_control.py  main.py  main_mqtt.py  pwm_control.py  steer_control.py
control/src_cpp/: driveControl.cpp  driveControl.h  main.cpp  pwmControl.cpp  pwmControl.h
data/drawio/: rc_car_architecture.drawio  rc_car_components.drawio
hmi/: Dockerfile  README.md  index.html  package.json  receiving_frames.py
hmi/src/: index.html  server.js
lane_detection/: README.md  requirements.txt
lane_detection/.config/: config.dist.json  config.json
lane_detection/src/: main.py
lane_detection/src_cpp/: ImageProcessorEnum.h  ImageProcessorImpl.cpp  ImageProcessorImpl.h  InputEnum.h  InputFactory.cpp  InputFactory.h  InputImportImage.cpp  InputImportImage.h  InputImportImageOcv.cpp  InputImportImageOcv.h  OpenJpegToBytes.cpp  OpenJpegToBytes.h  OutputFactory.cpp  OutputFactory.h  OutputSaveFrame.cpp  OutputSaveFrame.h  OutputSaveFrameOcv.cpp  OutputSaveFrameOcv.h  compile.txt  controler.cpp  controler.h  image_processor.h  image_processor_factory.cpp  image_processor_factory.h  main.cpp
scripts/: takePiCameraImage.py
(+75 files in other folders)
